fix(frontend): make tenant dropdown show even when sidebar is collapsed (#709)

--- a/public/app/components/SidebarTenant.module.css
+++ b/public/app/components/SidebarTenant.module.css
@@ -12,6 +12,9 @@
 .dropdown {
   border: 1px solid rgba(255, 255, 255, 0.2) !important;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4) !important;
+
+  /* needs to be bigger than the sidebar, since it will be shown on top of it */
+  z-index: 9999 !important;
 }
 
 .orgID {
